--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "^6.20.0",
+    "babel-runtime": "^6.25.0",
+    "bcrypt": "^1.0.2",
     "classnames": "^2.2.5",
     "js-yaml": "^3.9.1",
     "meteor-node-stubs": "~0.2.4",
