--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.6.1",
     "react-addons-pure-render-mixin": "^15.6.0",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "react-youtube": "^7.4.0"
   }
 }
